--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,36 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>Setores</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content [fullscreen]="true">
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+        <ion-fab-button (click)="irParaCadastrar()" color="danger">
+          <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+      </ion-fab>
+
+      <ion-list>
+          <ion-item-sliding *ngFor="let contato of contatos; let i = index;">
+            <ion-item-options side="end">
+              <ion-item-option color="secondary" (click)="editar(contato?.key)">
+                <ion-icon name="create" style="font-size: 4vh"></ion-icon>
+              </ion-item-option>
+              <ion-item-option color="danger" (click)="deletar(i)">
+                  <ion-icon name="trash" style="font-size: 4vh"></ion-icon>
+                </ion-item-option>
+            </ion-item-options>
+            <ion-item>
+              <ion-label>{{contato?.nome}}</ion-label>
+              <ion-label>{{contato?.telefone}}</ion-label>
+            </ion-item>
+          </ion-item-sliding>
+        </ion-list>
+
+
+<ion-item *ngIf="this.contatos?.length==0">
+  <ion-label>Lista de Contatos Vazia</ion-label>
+</ion-item>
 </ion-content>
