--- a/src/app/editar/editar.page.html
+++ b/src/app/editar/editar.page.html
@@ -20,5 +20,7 @@
       maxlength="15"
     ></ion-input>
     </ion-item>
-    <ion-button (click)="cadastrar()" size="full" style="margin-top: 5vh">Cadastrar</ion-button>
+    
+    <ion-button (click)="salvar()" size="full" style="margin-top: 5vh">Salvar Alterações</ion-button>
   </ion-content>
+
