--- a/src/app/editar/editar.page.scss
+++ b/src/app/editar/editar.page.scss
@@ -1,11 +1,9 @@
 ion-toolbar{
     text-align: center;
     color: #f7f7fd;
-    --ion-background-color:#000000;
-  }
-  
-  ion-content{
-  
+    --ion-background-color:#3a9161;
+}
+
+ion-content{
     --ion-background-color:#daedf0;
-  }
-  
+}
