--- a/src/app/editar/editar.page.html
+++ b/src/app/editar/editar.page.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>CADASTRO</ion-title>
+    <ion-title>  <img class="logo" alt="logo" src="assets\Logo.jpg"/></ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
     <ion-item>
-      <h3>Criar novo Setor</h3>
+      <h3>Editar Setor</h3>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Nome do Setor</ion-label>
