--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,13 +1,13 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>  <img class="logo" alt="logo" src="assets\Logo.png"/></ion-title>
+    <ion-title>  <img class="logo" alt="logo" src="assets\Logo.jpg"/></ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content padding class="getstart">
 <ion-content>
 
   <ion-item>
-    <h3>Informe os Dados para Identificação e Acesso</h3>
+    <h3>Identificação e Acesso</h3>
 
   </ion-item>
   <form [formGroup]="formLogin" (submit)="submitFormLogin()">
