--- a/src/app/registrar/registrar.page.html
+++ b/src/app/registrar/registrar.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Criar Contato</ion-title>
+    <ion-title>  <img class="logo" alt="logo" src="assets\Logo.jpg"/></ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -22,11 +22,7 @@
         * Formato de email inválido
     </small>
 
-    <ion-item>
-      <ion-label position="floating">Setor</ion-label>
-      <ion-input type="text" formControlName="setor"></ion-input>
-    </ion-item>
-
+  
     <ion-item>
       <ion-label position="floating">Senha</ion-label>
       <ion-input type="password" formControlName="senha"></ion-input>
