--- a/src/app/cadastrar/cadastrar.page.html
+++ b/src/app/cadastrar/cadastrar.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>CADASTRO</ion-title>
+    <ion-title>  <img class="logo" alt="logo" src="assets\Logo.jpg"/></ion-title>
   </ion-toolbar>
 </ion-header>
 
