--- a/src/app/cadastrar/cadastrar.page.scss
+++ b/src/app/cadastrar/cadastrar.page.scss
@@ -3,7 +3,9 @@ ion-toolbar{
     color: #f7f7fd;
     --ion-background-color:#000000;
   }
-  
+  ion-title{
+    color: #3f57e2;
+}
   ion-content{
   
     --ion-background-color:#daedf0;
