--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,19 +1,20 @@
 ion-toolbar{
     text-align: center;
-    color: #f7f7fd;
+    color: #3972a7;
     --ion-background-color:#000000;
   }
   
   ion-content{
   
-    --ion-background-color:#daedf0;
+    --ion-background-color:#f9feff;
   }
+  
   
   #login {
       text-align: center;
     
       position: absolute;
-      left: 0;
+      left: 10;
       right: 0;
       top: 50%;
       transform: translateY(-50%);
@@ -23,11 +24,8 @@ ion-toolbar{
     
       .logo{
   
-        z-index: 1;
-        width: 100;
-        margin-top: auto;
-  
-   
+        background-size: 250px;
+        position: center;
       }
       
-    
+  
