--- a/src/app/registrar/registrar.page.scss
+++ b/src/app/registrar/registrar.page.scss
@@ -1,10 +1,14 @@
 ion-toolbar{
     text-align: center;
-    color: #f7f7fd;
-    --ion-background-color:#000000;
+    color: #13135a;
+   
   }
   
   ion-content{
   
-    --ion-background-color:#daedf0;
+    --ion-background-color:#48aab9;
   }
+  ion-title{
+    color: #3f57e2;
+}
+  
