--- a/src/app/editar/editar.page.scss
+++ b/src/app/editar/editar.page.scss
@@ -1,12 +1,17 @@
 ion-toolbar{
     text-align: center;
-    color: #f7f7fd;
-    --ion-background-color:#3a9161;
+   
+    --ion-background-color:#f2f7f4;
 }
 
 ion-content{
     --ion-background-color:#daedf0;
 }
 ion-title{
-    color: #3f57e2;
+    padding: 5px;
+    background-color:#ffffff ;
 }
+ion-card{
+    --ion-background-color:#fffefe;
+    border-radius: 10px;
+  }
