--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,36 +1,65 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>  <img class="logo" alt="logo" src="assets\Logo.jpg"/></ion-title>
+    <ion-title> <img class="logo" alt="logo" src="assets\Logo.jpg" /></ion-title>
+  
   </ion-toolbar>
+ 
 </ion-header>
 
 
 <ion-content [fullscreen]="true">
-    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-        <ion-fab-button (click)="irParaCadastrar()" color="danger">
-          <ion-icon name="add"></ion-icon>
-        </ion-fab-button>
-      </ion-fab>
+  <ion-fab vertical="top" horizontal="end" slot="fixed" expand="small" *ngIf="this.userData == 'adm@aprendiz.com'">
+    <ion-fab-button (click)="irParaCadastrar()" color="success">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  <ion-button class="sair" (click)="sair()" color="danger" size="small">Sair</ion-button>
+  <ion-label class="nivel" bg-color="green" *ngIf="this.userData == 'adm@aprendiz.com'">Administrador</ion-label>
+  <ion-label class="nivel" bg-color="green" *ngIf="this.userData == 'gestor@aprendiz.com'">Gestor</ion-label>
+  <ion-label class="nivel" bg-color="green" *ngIf="this.userData != 'adm@aprendiz.com' && this.userData != 'gestor@aprendiz.com'" >Aprendiz</ion-label>
+  <ion-label class="email"> {{ this.userData }}</ion-label>
+  <ion-item-divider></ion-item-divider>
 
-      <ion-list>
-          <ion-item-sliding *ngFor="let setor of setores; let i = index;">
-            <ion-item-options side="end">
-              <ion-item-option color="secondary" (click)="editar(setor?.key)">
-                <ion-icon name="create" style="font-size: 4vh"></ion-icon>
-              </ion-item-option>
-              <ion-item-option color="danger" (click)="deletar(setor?.key)">
-                  <ion-icon name="trash" style="font-size: 4vh"></ion-icon>
-                </ion-item-option>
-            </ion-item-options>
-            <ion-item>
-              <ion-label>{{setor?.nome}}</ion-label>
-              <ion-label>{{setor?.gestor}}</ion-label>
-            </ion-item>
-          </ion-item-sliding>
-        </ion-list>
+  <ion-label class="label">Setores Cadastrados</ion-label>
+ 
+  <ion-list>
+    <ion-item-sliding *ngFor="let setor of setores; let i = index;" text-wrap (click)="toggleGroup(i)"
+      [ngClass]="{active: isGroupShown(i)}">
+      <ion-card>
+      <ion-item>
+        <p class="setor">
+          <b>Nome:</b><i> {{ setor.nome }}</i> <br>
+          <b> Gestor:</b><i> {{ setor.gestor }}</i>
+        </p>
+        <ion-label class="detalhes"> clique para + detalhes</ion-label>
+      </ion-item>
+        <div class="drop" *ngIf="isGroupShown(i)">
+          <br>
+            <ion-label class="view1">Funções do Setor:</ion-label>
+          <ion-textarea class="view">{{ setor.funcoes }} </ion-textarea>
+          <ion-label class="view1">Funções do Aprendiz:</ion-label>
+        <ion-textarea class="view">{{ setor.funcoes_ap }} </ion-textarea>
+        <ion-label class="view1">Procedimentos:</ion-label>
+        <ion-textarea class="view">{{ setor.procedimentos }} </ion-textarea>
+      </div>
+      
+      <ion-item-options side="end">
+        <ion-item-option color="secondary" (click)="editar(setor?.key)"  *ngIf="this.userData == 'adm@aprendiz.com' || this.userData == 'gestor@aprendiz.com'" >
+          <ion-icon name="create" style="font-size: 4vh"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+        <ion-item-options side="start">
+        <ion-item-option color="danger" (click)="deletar(setor?.key,setor?.nome)"  *ngIf="this.userData == 'adm@aprendiz.com'">
+          <ion-icon name="trash" style="font-size: 4vh"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+      </ion-card>
+    </ion-item-sliding>
+  
+  </ion-list>
 
 
-<ion-item *ngIf="this.setores?.length==0">
-  <ion-label>Lista de Contatos Vazia</ion-label>
-</ion-item>
+  <ion-item *ngIf="this.setores?.length==0">
+    <ion-label>Lista de Setores Vazia</ion-label>
+  </ion-item>
 </ion-content>
